--- a/package.json
+++ b/package.json
@@ -28,13 +28,22 @@
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "5.42.0",
     "@typescript-eslint/parser": "5.42.0",
+    "autoprefixer": "10.4.11",
     "eslint": "8.26.0",
     "eslint-plugin-qwik": "0.13.3",
-    "netlify-cli": "^12.0.11",
+    "netlify-cli": "^2.37.0",
     "node-fetch": "3.2.10",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.2.2",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "@builder.io/sdk-qwik": "^0.0.34",
+    "open-props": "^1.4.25",
+    "postcss-cli": "^10.0.0",
+    "postcss-import": "^15.0.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-preset-env": "^7.8.3"
   }
 }
