--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-qwik": "0.13.3",
     "netlify-cli": "^2.37.0",
     "node-fetch": "3.2.10",
+    "postcss": "^8.4.19",
+    "postcss-custom-media": "^9.0.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.2.2",
